# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  flake.nix
backend/: Dockerfile
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
